[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/nogrid_texture.png" type="Texture" id=2]
[ext_resource path="res://assets/images/square_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/custom_fonts.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/gui.gd" type="Script" id=5]
[ext_resource path="res://scripts/pause_box.gd" type="Script" id=6]

[sub_resource type="Animation" id=5]
resource_name = "start_box_appear"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../InfoBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../HighScoreTable:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sync_settings"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "start_box_disappear"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../InfoBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../HighScoreTable:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="InputEventKey" id=7]
scancode = 16777232

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 26
font_data = ExtResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Layer1/StartBox")
autoplay = "start_box_appear"
anims/start_box_appear = SubResource( 5 )
anims/start_box_disappear = SubResource( 4 )

[node name="Layer1" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="Layer1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.6, 0.572549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="TextureRect" parent="Layer1"]
modulate = Color( 0.596078, 0.580392, 0.580392, 1 )
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 490.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayFrame" type="NinePatchRect" parent="Layer1/Display"]
margin_left = -3.0
margin_top = -3.0
margin_right = 203.0
margin_bottom = 403.0
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreTable" type="VBoxContainer" parent="Layer1"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1st" type="Label" parent="Layer1/HighScoreTable"]
margin_right = 200.0
margin_bottom = 20.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="2nd" type="Label" parent="Layer1/HighScoreTable"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 45.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="3rd" type="Label" parent="Layer1/HighScoreTable"]
margin_top = 49.0
margin_right = 200.0
margin_bottom = 70.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="InfoBar" type="GridContainer" parent="Layer1"]
visible = false
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 80.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="Layer1/InfoBar"]
margin_right = 98.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Level: 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lines" type="Label" parent="Layer1/InfoBar"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Lines: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextShape" type="ColorRect" parent="Layer1/InfoBar"]
modulate = Color( 0.596078, 0.580392, 0.580392, 0 )
margin_top = 23.0
margin_right = 98.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="Layer1/InfoBar"]
margin_left = 102.0
margin_top = 23.0
margin_right = 200.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Score:
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBox" type="Control" parent="Layer1"]
self_modulate = Color( 0, 0.6, 0.572549, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 90.0
margin_right = 100.0
margin_bottom = 490.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Layer1/StartBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -58.0
margin_right = 83.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 6 )
shortcut = SubResource( 8 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Layer1/StartBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -4.0
margin_bottom = -91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InpuTips" type="Label" parent="Layer1/StartBox/VBoxContainer"]
margin_right = 188.0
margin_bottom = 222.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
text = "
up - rotate
left - move left
right - move right
down - soft drop
space - hard drop
escape - restart
P - pause
"

[node name="ShowShadow" type="HBoxContainer" parent="Layer1/StartBox/VBoxContainer"]
margin_top = 226.0
margin_right = 188.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Layer1/StartBox/VBoxContainer/ShowShadow"]
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
text = "Show shadow"
valign = 1

[node name="CheckBox" type="CheckBox" parent="Layer1/StartBox/VBoxContainer/ShowShadow"]
margin_left = 164.0
margin_right = 188.0
margin_bottom = 24.0
align = 1

[node name="ShowGrid" type="HBoxContainer" parent="Layer1/StartBox/VBoxContainer"]
margin_top = 254.0
margin_right = 188.0
margin_bottom = 278.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Layer1/StartBox/VBoxContainer/ShowGrid"]
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
text = "Show grid"
valign = 1

[node name="CheckBox" type="CheckBox" parent="Layer1/StartBox/VBoxContainer/ShowGrid"]
margin_left = 164.0
margin_right = 188.0
margin_bottom = 24.0

[node name="PlayMusic" type="HBoxContainer" parent="Layer1/StartBox/VBoxContainer"]
margin_top = 282.0
margin_right = 188.0
margin_bottom = 306.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Layer1/StartBox/VBoxContainer/PlayMusic"]
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
text = "Play music"
valign = 1

[node name="CheckBox" type="CheckBox" parent="Layer1/StartBox/VBoxContainer/PlayMusic"]
margin_left = 164.0
margin_right = 188.0
margin_bottom = 24.0

[node name="PlaySounds" type="HBoxContainer" parent="Layer1/StartBox/VBoxContainer"]
margin_top = 310.0
margin_right = 188.0
margin_bottom = 334.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Layer1/StartBox/VBoxContainer/PlaySounds"]
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
text = "Play sounds"
valign = 1

[node name="CheckBox" type="CheckBox" parent="Layer1/StartBox/VBoxContainer/PlaySounds"]
margin_left = 164.0
margin_right = 188.0
margin_bottom = 24.0
align = 1

[node name="Layer2" type="CanvasLayer" parent="."]

[node name="PauseBox" type="ColorRect" parent="Layer2"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Layer2/PauseBox"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Layer2/PauseBox/CenterContainer"]
margin_left = 49.0
margin_top = 233.0
margin_right = 171.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 12 )
text = "PAUSED"

[connection signal="button_up" from="Layer1/StartBox/Play" to="." method="_on_Play_button_up"]
[connection signal="toggled" from="Layer1/StartBox/VBoxContainer/ShowShadow/CheckBox" to="." method="_on_SHOW_SHADOW_toggled"]
[connection signal="toggled" from="Layer1/StartBox/VBoxContainer/ShowGrid/CheckBox" to="." method="_on_SHOW_GRID_toggled"]
[connection signal="toggled" from="Layer1/StartBox/VBoxContainer/PlayMusic/CheckBox" to="." method="_on_PLAY_MUSIC_toggled"]
[connection signal="toggled" from="Layer1/StartBox/VBoxContainer/PlaySounds/CheckBox" to="." method="_on_PLAY_SOUNDS_toggled"]
